--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "next": "12.1.2",
+    "nookies": "^2.5.2",
+    "nprogress": "^0.2.0",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-hook-form": "^7.28.1"
   },
   "devDependencies": {
     "eslint": "8.12.0",
